<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_of_main_screen"
    tools:context=".MainScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/game_name"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/str_game_name"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/main_new_game"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:background="@drawable/btns_on_main_screen"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/new_game"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/main_load"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:background="@drawable/btns_on_main_screen"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/load"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/main_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:background="@drawable/btns_on_main_screen"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/main_authors"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:background="@drawable/btns_on_main_screen"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/authors"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/main_exit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:background="@drawable/btns_on_main_screen"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>